[tool.poetry]
name = "samplenet_torch"
version = "0.1.0"
description = ""
authors = ["ygjken <ken.748322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kornia = "^0.5.6"
torch = { url = "https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp37-cp37m-linux_x86_64.whl" }
knn-cuda = {url = "https://github.com/unlimblue/KNN_CUDA/releases/download/0.2/KNN_CUDA-0.2-py3-none-any.whl"}

[tool.poetry.dev-dependencies]


[tool.poe.tasks]
get-pointnet2 = "git clone https://github.com/erikwijmans/Pointnet2_PyTorch.git"
install-pointnet2 = "pip install Pointnet2_PyTorch/pointnet2_ops_lib/."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
